--- a/series/methods - series.ipynb
+++ b/series/methods - series.ipynb
@@ -20,6 +20,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "d71bcaff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "korm = pd.Series([\"RKZ-PerepelStart\", \"RKZ-PerepelFinish\", \"RKZ-KuriStart\", \"RKZ-Kuri\", \"RKZ-Utki\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "bf105bc8",
    "metadata": {},
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "80ed7357",
    "metadata": {},
    "outputs": [
@@ -192,7 +202,7 @@
        "33.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7a087444",
    "metadata": {},
    "outputs": [
@@ -221,7 +231,7 @@
        "45.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6b9a99aa",
    "metadata": {},
    "outputs": [
@@ -242,7 +252,7 @@
        "45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "517a737c",
    "metadata": {},
    "outputs": [
@@ -271,7 +281,7 @@
        "151.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "1845d24a",
    "metadata": {},
    "outputs": [
@@ -292,7 +302,7 @@
        "151.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "78a8c1b8",
    "metadata": {},
    "outputs": [
@@ -321,7 +331,7 @@
        "37.75"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2632f43e",
    "metadata": {},
    "outputs": [
@@ -342,7 +352,7 @@
        "37.75"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "84a60169",
    "metadata": {},
    "outputs": [
@@ -373,7 +383,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,9 +393,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66c35e81",
+   "metadata": {},
+   "source": [
+    "## Применение функций к элемента серий"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "52d27281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_one(n):\n",
+    "    n = n+1\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c76a3a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RKZ-PerepelStart     46.0\n",
+      "RKZ-PerepelFinish    36.0\n",
+      "RKZ-KuriStart        39.0\n",
+      "RKZ-Kuri             34.0\n",
+      "RKZ-Utki              NaN\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = price_combi.apply(add_one)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a7ccac9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     +++RKZ-PerepelStart+++\n",
+       "1    +++RKZ-PerepelFinish+++\n",
+       "2              RKZ-KuriStart\n",
+       "3                   RKZ-Kuri\n",
+       "4                   RKZ-Utki\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = korm.apply(lambda s: \"+++\" + s + \"+++\" if \"e\" in s else s)\n",
+    "p\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "77bdbdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sep(x):\n",
+    "    if \"a\" in x:\n",
+    "        return \"+\".join(x)\n",
+    "    else:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d74879ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    R+K+Z+-+P+e+r+e+p+e+l+S+t+a+r+t\n",
+      "1                  RKZ-PerepelFinish\n",
+      "2          R+K+Z+-+K+u+r+i+S+t+a+r+t\n",
+      "3                           RKZ-Kuri\n",
+      "4                           RKZ-Utki\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = korm.apply(sep)\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa77d477",
+   "metadata": {},
+   "source": [
+    "#### Выборка элементов по содержимому строки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "fb137fea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0    False\n",
+      "1    False\n",
+      "2     True\n",
+      "3     True\n",
+      "4    False\n",
+      "dtype: bool]\n"
+     ]
+    }
+   ],
+   "source": [
+    "korm[korm.str.contains(\"Kuri\")]\n",
+    "print(k)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6653bb0",
+   "id": "f693d0c2",
    "metadata": {},
    "outputs": [],
    "source": []
